# ChatbotIA

./: .dockerignore  Chatbot.py  Dockerfile  Openai.py  README.md  RESOLUÇÃO Nº 5867-2020.docx  ingest_docx.py  openai_agent.py  pyproject.toml  requirements.txt  streamlit_app.py  video.py
.streamlit/: config.toml
data/: 1-- Slides Especialista em reforma tributária 06-2025 .docx  2 -- GESTAO-DE-DOCUMENTOS-NO-TRANSPORTE .docx  L13703.docx  knowledge.sqlite
tmp/: data.db
