[project]
name = "chatbotia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.1.3",
    "chromadb>=1.1.1",
    "fastapi[standard]>=0.118.2",
    "openai>=2.2.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
